# prismatic-tree-sitter

./: .gitignore  .subtree.toml  Justfile  cabal.project  flake.nix  package-common.yaml
lang/typescript/: package.yaml  prismatic-tree-sitter-lang-typescript.cabal
lang/typescript/src/TreeSitter/Prismatic/Language/: Typescript.hs
lang/typescript/src/TreeSitter/Prismatic/Language/Typescript/: Core.hs
prismatic-tree-sitter-core/: package.yaml  prismatic-tree-sitter-core.cabal  prismatic-tree-stiter.cabal
prismatic-tree-sitter-core/cbits/: bindings.dsl.h  current_library_tree_sitter_api.h  tree_sitter_ffi_bridge.c  tree_sitter_ffi_bridge.h
prismatic-tree-sitter-core/src/Data/Prismatic/: TreeSitter.hs
prismatic-tree-sitter-core/src/Data/Prismatic/TreeSitter/: Node.hs
prismatic-tree-sitter-core/src/Data/Prismatic/TreeSitter/Internal/: Binding.hsc
prismatic-tree-sitter-core/src/TreeSitter/Prismatic/Internal/: Binding.hsc  Language.hs
prismatic-tree-sitter-core/src/TreeSitter/Prismatic/Internal/Language/: TH.hs
