cabal-version:   3.0
name:            prismatic-tree-sitter-core
version:         0.1.0.0
license:         NONE
author:          YourFin
maintainer:      src@patrickn.co
build-type:      Simple

common warnings
    ghc-options: -Wall

executable example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
